--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,475 @@
-.App {
-  text-align: center;
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.lfloaters{
+    background-color: black;
+    color: white;
+    float: left;
+    height: 100%;
+    position: fixed;
+    display: inline-block;
+    width: 300px;
+}
+#rfloaters{
+    background-color: black;
+    color: white;
+     float: right; 
+    height: 100%;
+     position: fixed; 
+    display: inline-block;
+    width: 300px;
+        margin-left: 1200px;
+        margin-top: -1580px;
+
+
+ }
+.navigators{
+    color: rgb(219, 200, 200);
+    font-size: 1.2em;
+    font-family: sans-serif;
+    margin-left: 10px;
+    display: block;
+    height: 300px;
+
+
+
+
+}
+#hr{
+    width: 200px;
+    margin-right: 30px;
+    margin-left:30px ;
+}
+#a{
+    color: white;
+    display: flex;
+    margin-top: 15px;
+    margin-left: 20px;
+    font-size: 0.9em;
+    
+    
+}
+#a>#icn{
+    color: white;
+}
+.lists{
+    margin-left: 40px;
+    margin-top: 40px;
+    font-size: 0.8em;
+
+
+}
+#muse{
+    margin-top: 30px;
+    width: 40px;
+    font-size: 1.2em;
+    font-family: sans-serif;
+    text-decoration: none;
+    color: white;
+    
+}
+#fas{
+    margin-left: 20px;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.home{
+    margin-left: 300px;
+    background:linear-gradient(to bottom,rgb(11, 11, 143),black,black);
+    color: white;
+    margin-right: 316px;
+    width: 900px;
+    position:relative;
+
+    
+    
+    
+    
+    
+}
+.foot{
+    display: flex;
+    position:fixed !important;
+    
+    bottom: 0;
+    
+    
+    
+    
+    height: 100px;
+    width: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1em;
+    align-items: center;
+    background-color: rgb(14, 13, 13);
+    color: white;
+
+}
+.bro{
+    display: flex;
+    font-size: 1.2em;
+    width: 100%;
+    
+    
+
+
+
+}
+.i{
+    display: flex;
+    margin-left: 10px;
+    color: rgb(206, 204, 204);
+}
+.i>.i:hover{
+    
+    transform: scale(1.2);
+    color: white;
+    transition: all 0.3s ease;
+
+}
+.user{
+    margin-left: 500px;
+}
+#up{
+    width: 120px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: rgba(77, 73, 73, 0.452);
+    color: white;
+    border: solid springgreen;
+    margin-left: 10px;
+
+}
+.homeimage{
+    margin-top: 30px;
+    background: 50% 20% url("C:\React\Spotify\public\rema2.jpg") ;
+    height: 300px;
+    width: 800px;
+    margin-left: 50px;
+    border-radius: 0px;
+    box-shadow: 3px 3px rgba(34, 33, 33, 0.363);
+} 
+.homefooter{
+    height: 120px;
+    width: 100%;
+}
+#gd{
+    margin-left: 50px;
+    font-size: 1.8em;
+    font-family: sans-serif;
+    margin-top: 20px;
+
+}
+.pops{
+    display: flex;
+    width: 800px;
+    
+    
+}
+.new{
+    margin-left: 40px;
+    display: block;
+    
+}
+#new{
+    height: 80px;
+    width: 250px;
+    align-items: center;
+    margin-top: 20px;
+    text-align: center;
+    background-color: rgba(73, 70, 70, 0.473);
+    border-radius: 5px;
+    display: flex;
+    transition: all 0.3s ease;
+    
+    
+    
+}
+#img{
+    height: 100%;
+    width:80px ;
+    float: left;
+    border-radius: 5px;
+}
+#gh{
+    margin-top: 30px;
+    font-size: 1.2em;
+    font-family: sans-serif;
+    font-weight: bold;
+    
+}
+#go{
+    margin-left: 50px;
+    font-size: 1.8em;
+    font-family: sans-serif;
+    margin-top: 20px;
+
+}
+.madefor{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 20px;
+
+    width: 700px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.mkd{
+    width: 300px;
+    height: 300px;
+    background-color: rgb(26, 25, 25);
+    margin-left: 10px;
+    align-items: center;
+    border-radius: 10px;
+   
+}
+#koh{
+    width:190px ;
+    height: 190px;
+    border-radius: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 20px;
+    border-bottom-style: solid;
+    border-bottom-color: red;
+    border-bottom-width: 6px;
+   
+}
+#koh1{
+    width:190px ;
+    height: 190px;
+    border-radius: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 20px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(57, 184, 235);
+    border-bottom-width: 6px;
+    z-index: 999;
+    position: static;
+}
+#koh2{
+    width:190px ;
+    height: 190px;
+    border-radius: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 20px;
+    border-bottom-style: solid;
+    border-bottom-color: rgba(255, 255, 0, 0.863);
+    border-bottom-width: 6px;
+    z-index: 999;
+    position: static;
+}
+#koh3{
+    width:190px ;
+    height: 190px;
+    border-radius: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 20px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(226, 179, 49);
+    border-bottom-width: 6px;
+    z-index: 999;
+    position: static;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+h4{
+    margin-top: 20px;
+    margin-left: 40px;
+    font-size: 1.2em;
+    font-family: sans-serif;
+}
+p{
+    margin-left: 20px;
+    font-family: sans-serif;
+}
+#you{
+    margin-left: 50px;
+    font-size: 1.8em;
+    font-family: sans-serif;
+    margin-top: 20px;
+    
+}
+#act{
+    margin-left: 30px;
+    font-size: 1.4em;
+    font-family: sans-serif;
+    padding: 20px;
+
+}
+.text{
+    font-size: 1em;
+
+}
+.friend{
+    display: inline-block;
+    align-items: center;
+}
+#j{
+    height: 60px;
+    margin-left: 30px;
+    background-color: rgb(44, 43, 43);
+    margin-top: 20px;
+    border-radius: 20px;
+    width: 260px;
+
+    
+}
+#l{
+    margin-left: 90px;
+    margin-top: -40px;
+    font-size: 0.9em;
+    
+}
+#set{
+    width: 180px;
+    height: 50px;
+    border-radius: 30px;
+    margin-left: 60px;
+    margin-top: 40px;
+    font-size: 1em;
+   
+    
+}
+.audiotest{
+    background-color: white;
+    z-index: 999;
+}
+.more{
+    font-size: 5em;
+}
+#us{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+#l{
+    margin-top: -30px;
+}
+#fas{
+    font-size: 1.8em;
+}
+#jk{
+    font-size: 1.8em;
+    color: white;
+    
+}
+#gm{
+    margin-top: -20px;
+    font-size: 0.8em;
+    font-family: monospace;
+    
+    
+}
+#lala{
+    margin-top: 20px;
+    font-size: 1em;
+}
+   /* ********************* effects*************************** */
+
+#a:hover{
+    color:rgb(17, 255, 17);
+    transform: scale(1.03);
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+#muse:hover{
+    color: white;
+    cursor: pointer;
+    
+
+}
+#jk:hover{
+    transform: scale(1.2);
+    transition: all 0.3s ease;
+    color: rgba(52, 199, 52, 0.781);
+
+}
+#up:hover{
+    transform: scale(1.1);
+    transition: all 0.3s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.mkd:hover{
+    color:white;
+    background-color: rgb(24, 24, 24);
+    transform: scale(1.1);
+    transition: all 0.3s ease;
+    cursor: pointer;
+
+
+}
+.mkd:hover>.play{
+    display: block;
+}
+.play{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgb(24, 255, 24);
+    margin-left: 190px;
+    display: none;
+    align-items: center;
+    position: absolute;
+    box-shadow: 2px 4px 4px 2px rgb(19, 18, 18);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.mkd>.play{
+    margin-left: 00px;
+    display: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgb(24, 255, 24);
+    margin-left: 140px;
+    display: none;
+    align-items: center;
+    position: absolute;
+    box-shadow: 2px 4px 4px 2px rgb(19, 18, 18);
+    z-index: 999;
+    margin-top: -140px;
+}
+.mkd>.play>.icon{
+    margin-left: 5px;
+}
+#new:hover{
+    background-color: rgb(51, 50, 50);
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+#new:hover>.play{
+display: block;
+margin-right: 5px;
+margin-top: 10px;
+cursor: pointer;
+transform-origin: 40%;
+transition: all 5s ease;
+
+}
+.play>.icon{
+    font-size: 2em;
+    margin-top: 5px;
+    margin-left: 0px;
+    color: black;
+    transition: all 0.3s ease;
+
+}
+#set:hover{
+    transform: scale(1.07);
+    transition: all 0.3s ease;
+}
+.mkd:hover{
+    background-color:rgb(51, 46, 46) 
+
 }
