--- a/src/afro.css
+++ b/src/afro.css
@@ -2,13 +2,14 @@
     margin: 0;
 }
 .afrobeats{
-    margin-left: 300px;
-    background:linear-gradient(to bottom ,rgb(69, 192, 69),black,black,black);
+    margin-left: 250px;
+    background:linear-gradient(to bottom ,rgb(6, 124, 6),black,black,black);
     color: white;
     margin-right: 316px;
     width: 900px;
     position:relative;
     height: 1580px;
+    z-index: 0;
 
 
 
@@ -39,19 +40,8 @@
     font-size: 1em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
-}
-.about>h1{
-    margin-top: 0px;
-    margin-left: 10px;
-    font-size: 4em;
-    
-}
-#user{
+    text-align: left;
     margin-left: 20px;
-
-}
-#text{
-    margin-left: 60px;
     margin-top: -25px;
     font-size: 0.8em;
 }
@@ -86,7 +76,6 @@
     margin-left: 13px;
     margin-top: 13px;
     position: static;
-
 
     
 }
@@ -123,15 +112,15 @@
 
 }
 .button{
-    width: 110px;
+    width: 120px;
     height: 30px;
     margin-left: 20px;
     margin-top: 30px;
     display: flex;
     align-items: center;
-    text-align: center;
+    justify-content: center;
     color: white;
-    background-color: rgba(255, 255, 255, 0.158);
+    background-color: rgba(255, 255, 255, 0.041);
     border-radius: 5px;
     border-color: none;
     
@@ -147,7 +136,7 @@
     display: flex;
     margin-left: 8px;
     font-size: 0.9em;
-    margin-top: 4px;
+    margin-top: px;
 }
 .headers{
     margin-top: 40px;
@@ -155,12 +144,12 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;
     color: rgba(211, 206, 206, 0.767);
-    margin-left: 60px;
+    margin-left: 35px;
    
 
 }
 #span{
-    margin-left: 190px;
+    margin-left: 170px;
 }
 #span:hover{
     cursor: pointer;
@@ -218,11 +207,11 @@ hr{
 
 }
 .days{
-    margin-left: 140px;
+    margin-left: 70px;
     position: static;
 }
 .duration{
-    margin-left: 150px;
+    margin-left: 130px;
     align-items: center;
     display: flex;
 }
@@ -259,3 +248,22 @@ hr{
     width: 100%;
     height: 10px;
 }
+
+#rfloaters{
+    background-color: black;
+    color: white;
+     
+    height: 100%;
+     position: fixed; 
+    display: inline-block;
+    width: 20%;
+        margin-left: 80%;
+        margin-top: -1580px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        z-index: 1;
+
+
+ } 
+ .albums{
+     margin-left: 50px;
+ }
