--- a/src/playlist.css
+++ b/src/playlist.css
@@ -2,13 +2,14 @@
     margin: 0;
 }
 .playlist{
-    margin-left: 300px;
-    background:linear-gradient(to bottom ,rgb(233, 192, 12),black,black,black);
+    margin-left: 250px;
+    background:linear-gradient(to bottom ,orange,black,black,black);
     color: white;
     margin-right: 316px;
     width: 900px;
     position:relative;
     height: 1580px;
+    z-index: 0;
 
 
 
@@ -26,7 +27,7 @@
     width: 200px;
     height: 200px;
     color: white;
-    box-shadow: 10px 10px 10px 10px rgba(49, 48, 48, 0.329);
+    box-shadow: 5px 5px 5px 5px rgba(49, 48, 48, 0.521);
 }
 .about{
     display: block;
@@ -39,6 +40,8 @@
     font-size: 1em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
+    text-align: left;
+    margin-left: 10px;
 }
 .about>h1{
     margin-top: 0px;
@@ -54,6 +57,7 @@
     margin-left: 60px;
     margin-top: -25px;
     font-size: 0.8em;
+    text-align: left;
 }
 #user{
     width: 30px;
@@ -122,13 +126,13 @@
 
 }
 .button{
-    width: 110px;
+    width: 120px;
     height: 30px;
     margin-left: 20px;
     margin-top: 30px;
     display: flex;
     align-items: center;
-    text-align: center;
+    justify-content: center;
     color: white;
     background-color: rgba(255, 255, 255, 0.041);
     border-radius: 5px;
@@ -146,7 +150,7 @@
     display: flex;
     margin-left: 8px;
     font-size: 0.9em;
-    margin-top: 4px;
+    margin-top: px;
 }
 .headers{
     margin-top: 40px;
@@ -154,12 +158,12 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;
     color: rgba(211, 206, 206, 0.767);
-    margin-left: 60px;
+    margin-left: 35px;
    
 
 }
 #span{
-    margin-left: 190px;
+    margin-left: 170px;
 }
 #span:hover{
     cursor: pointer;
@@ -217,11 +221,11 @@ hr{
 
 }
 .days{
-    margin-left: 140px;
+    margin-left: 50px;
     position: static;
 }
 .duration{
-    margin-left: 150px;
+    margin-left: 100px;
     align-items: center;
     display: flex;
 }
@@ -257,6 +261,25 @@ hr{
 .space{
     width: 100%;
     height: 10px;
+}
+
+#rfloaters{
+    background-color: black;
+    color: white;
+     
+    height: 100%;
+     position: fixed; 
+    display: inline-block;
+    width: 20%;
+        margin-left: 80%;
+        margin-top: -1580px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        z-index: 1;
+
+
+ }
+ .albums{
+    margin-left: 50px;
 }
 
 
