--- a/src/usmusic.css
+++ b/src/usmusic.css
@@ -1,14 +1,16 @@
+
 *{
     margin: 0;
 }
 .usmusic{
-    margin-left: 300px;
+    margin-left: 250px;
     background:linear-gradient(to bottom ,rgb(119, 51, 184),black,black,black);
     color: white;
     margin-right: 316px;
     width: 900px;
     position:relative;
     height: 1580px;
+    z-index: 0;
 
 
 
@@ -39,6 +41,8 @@
     font-size: 1em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
+    text-align: left;
+    margin-left: 20px;
 }
 .about>h1{
     margin-top: 0px;
@@ -54,6 +58,7 @@
     margin-left: 60px;
     margin-top: -25px;
     font-size: 0.8em;
+    text-align: left;
 }
 #user{
     width: 30px;
@@ -154,12 +159,12 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;
     color: rgba(211, 206, 206, 0.767);
-    margin-left: 60px;
+    margin-left: 35px;
    
 
 }
 #span{
-    margin-left: 190px;
+    margin-left: 170px;
 }
 #span:hover{
     cursor: pointer;
@@ -168,7 +173,7 @@
 }
 hr{
     width: 800px;
-    margin-left: 60px;
+    margin-left: 30px;
     margin-bottom: none;
 }
 .soundtrack{
@@ -183,7 +188,7 @@ hr{
 
 }
 .number{
-    margin-left: 40px;
+    margin-left: 20px;
 }
 .plc{
     width: 50px;
@@ -217,11 +222,11 @@ hr{
 
 }
 .days{
-    margin-left: 140px;
+    margin-left: 50px;
     position: static;
 }
 .duration{
-    margin-left: 150px;
+    margin-left: 100px;
     align-items: center;
     display: flex;
 }
@@ -257,4 +262,23 @@ hr{
 .space{
     width: 100%;
     height: 10px;
+}
+
+#rfloaters{
+    background-color: black;
+    color: white;
+     
+    height: 100%;
+     position: fixed; 
+    display: inline-block;
+    width: 20%;
+        margin-left: 80%;
+        margin-top: -1580px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        z-index: 1;
+
+
+ }
+ .albums{
+    margin-left: 50px;
 }
